# spindler

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: about.md  conf.py  index.rst  quickstart.ipynb  requirements.txt
docs/_build/doctrees/: about.doctree  api.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree  quickstart_interactive.doctree
docs/_build/doctrees/nbsphinx/: quickstart.ipynb
docs/_build/html/: .buildinfo  about.html  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  quickstart_interactive.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  installation.md.txt  quickstart_interactive.ipynb.txt
src/: quickstart.ipynb  quickstart_interactive.ipynb  solver.py
src/spindler/: __init__.py  cbd_orbit.py  csvreader.c  csvreader.h  read_csv.c  read_csv.h  solver.py  spindler.c  spindler.h  test.c
src/spindler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spindler/tables/: edot_siwek23.csv  edot_zrake21.csv  lambda_siwek23.csv
src/spindler/tables/DD21/: edot.csv
src/spindler/tables/Siwek23/: adota.csv  edot.csv  qdot.csv
src/spindler/tables/spindler.egg-info/: SOURCES.txt  requires.txt
src/tests/: tests.py
tests/: test_spindler.c  test_spindler.py
